--- a/react-web-app/package.json
+++ b/react-web-app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-aws-s3-typescript": "^1.1.5",
+    "react-dom": "^18.2.0",
+    "react-s3": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
