--- a/react-web-app/package.json
+++ b/react-web-app/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-sdk": "^2.1589.0",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
-    "react-aws-s3-typescript": "^1.1.5",
-    "react-dom": "^18.2.0",
-    "react-s3": "^1.3.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
