--- a/cdk/package.json
+++ b/cdk/package.json
@@ -21,6 +21,9 @@
     "typescript": "~5.4.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/client-s3": "^3.540.0",
+    "@aws-sdk/lib-dynamodb": "^3.540.0",
     "aws-cdk-lib": "2.134.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
