--- a/react-web-app/package.json
+++ b/react-web-app/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aws-sdk": "^2.1589.0",
+    "@aws-sdk/client-s3": "^3.540.0",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
